--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE." />
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
-<title>TiddlyWiki — a non-linear personal web notebook</title>
+<title>My TiddlyWiki — a non-linear personal web notebook</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~-->
 
 <!--~~ Raw markup ~~-->
@@ -139,7 +139,36 @@ Error message and password prompt
 <div id="splashArea">
 
 
-<div class=" tc-reveal" hidden="true"></div>
+<p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
+
+<li>$:/core</li>
+
+<li>$:/GitHub/Filename</li>
+
+<li>$:/GitHub/Path</li>
+
+<li>$:/GitHub/Repo</li>
+
+<li>$:/GitHub/Username</li>
+
+<li>$:/isEncrypted</li>
+
+<li>$:/state/tab--86143343</li>
+
+<li>$:/state/tab-1749438307</li>
+
+<li>$:/state/tab-2065006209</li>
+
+<li>$:/status/RequireReloadDueToPluginChange</li>
+
+<li>$:/StoryList</li>
+
+<li>$:/themes/tiddlywiki/snowwhite</li>
+
+<li>$:/themes/tiddlywiki/vanilla</li>
+
+</ul>
+</p>
 
 
 
@@ -10016,8 +10045,35 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210119034650074" modified="20210119034650075" title="$:/GitHub/Filename">
+<pre>index.html</pre>
+</div>
+<div created="20210119034642110" modified="20210119034809582" title="$:/GitHub/Path">
+<pre>/</pre>
+</div>
+<div created="20210119034620268" modified="20210119034631342" title="$:/GitHub/Repo">
+<pre>CodeIdeal/Personal-Wiki</pre>
+</div>
+<div created="20210119034613526" modified="20210119034633859" title="$:/GitHub/Username">
+<pre>CodeIdeal</pre>
+</div>
 <div title="$:/isEncrypted">
 <pre>no</pre>
+</div>
+<div created="20210119034122443" modified="20210119034123827" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
+</div>
+<div created="20210119034111826" modified="20210119034124737" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Saving</pre>
+</div>
+<div created="20210119034126405" modified="20210119034126405" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+</div>
+<div title="$:/status/RequireReloadDueToPluginChange">
+<pre>no</pre>
+</div>
+<div created="20210119034110119" list="$:/ControlPanel" modified="20210119034110119" title="$:/StoryList">
+<pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
 <pre>{
